# MapRoutingAlgorithms

./: .gitignore  CMakeLists.txt  Readme.md
data/: graph_dc_area.2022-03-11.csv
data/csv/: berlin_osm_graph.csv
include/: CSVReader.h  Edge.h  Graph.h  MercatorProjection.h  Vertex.h  utils.h
scripts/: compare_paths.py  generate_random_graph.py  graph_traversal.py  konect_to_csv.py  mercator_projection.py  osm_to_csv.py  snap_to_csv.py
src/: CSVReader.cpp  Edge.cpp  Graph.cpp  MercatorProjection.cpp  Vertex.cpp  main.cpp
tests/: test_cross_validation.cpp  test_csv_reader.cpp  test_graph.cpp  test_graph_and_csvreader.cpp  test_mercator_projection.cpp  test_performance.cpp  test_performance_random_graph.cpp
